package com.epam.training.money.impl;

public class Product {
}
