package com.epam.training.webshop.order;

public interface Observable {

    void subscribe(Observer observer);
}
